--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -5,6 +5,19 @@
     <title>Magistrant</title>
 </head>
 <body>
+    <nav>
+        <a href="{% url 'main' %}">Главная</a>
+        {% if user.is_anonymous %}
+            <div style="text-align: right">
+                <a href="{% url 'registration' %}">Регистрация</a>
+            </div>
+        {% else %}
+            <div style="text-align: right">
+                Вы авторизованы как <b><i>{{ user.username }}</i></b>
+                <a href="{% url 'logout' %}">Выйти</a>
+            </div>
+        {% endif %}
+    </nav>
     {% block content %}{% endblock %}
 </body>
 </html>
