--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -42,5 +42,10 @@
             </div>
     </div>
     {% block content %}{% endblock %}
+    <footer class="border-footer site-bottom">
+        <p class="copyright-text">Copyright &copy; 2025 MAXDEN
+        | Website by <a rel="nofollow" href="https://github.com/IVIaximushka">Max</a>
+        and <a rel="nofollow" href="https://github.com/Chopar5115">Den</a></p>
+    </footer>
 </body>
 </html>
