--- a/web/static/css/mystyle.css
+++ b/web/static/css/mystyle.css
@@ -1,6 +1,17 @@
-.site-top {
+.site-top{
     background-color: #0b97c4;
     min-height: 60px;
+}
+
+.site-bottom{
+    background-color: #0b97c4;
+    min-height: 60px;
+    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    font-family: fantasy;
 }
 
 .flex-container{
