--- a/web/templates/auth.html
+++ b/web/templates/auth.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>Вход</h2>
-    <form action="" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button>Войти</button>
-    </form>
+    <div class="form-wrapper">
+     <div class="auth-form">
+        <h2>Вход</h2>
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="button2">Войти</button>
+        </form>
+     </div>
+    </div>
 {% endblock %}
