--- a/web/static/css/mystyle.css
+++ b/web/static/css/mystyle.css
@@ -32,8 +32,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
+
+.reg-form{
+    margin: 10vh 0 0 0;
+    padding: 1vh 5vh 5vh 5vh;
+    background-color: #0b97c4;
+    border: groove #2e6da4;
+    border-radius: 10px;
+    width: 50vh;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .flex-container{
     padding-top: 10px;
     display: flex;
