add pie diagram

--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -77,7 +77,10 @@
                             </tbody>
                         </table>
                 </div>
-                <img src="data:image/png;base64,{{ course.first_semester_diagram|safe }}" alt="">
+                {% if course.first_semester_diagram is not None %}
+                    <img src="data:image/png;base64,{{ course.first_semester_diagram|safe }}" alt="">
+                    <img src="data:image/png;base64,{{ course.first_semester_pie|safe }}" alt="">
+                {% endif %}
                 <div class="flex-container-column">
                     <p>2 семестр</p>
                     <table class="table table-strip table-advance table-hover table2">
@@ -124,7 +127,10 @@
                             </tbody>
                         </table>
                 </div>
-                <img src="data:image/png;base64,{{ course.second_semester_diagram|safe }}" alt="">
+                {% if course.second_semester_diagram is not None %}
+                    <img src="data:image/png;base64,{{ course.second_semester_diagram|safe }}" alt="">
+                    <img src="data:image/png;base64,{{ course.second_semester_pie|safe }}" alt="">
+                {% endif %}
             </div>
         {% endfor %}
     {% endif %}
